--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'neue-thin';
+  src: url('/NeueHaasDisplayThin.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 @layer base {
   :root {
